# srsRAN

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/python/: CMakeLists.txt  crc.i  ldpc_decoder.i
lib/src/: CMakeLists.txt
lib/src/phy/: CMakeLists.txt
lib/src/phy/ch_estimation/: CMakeLists.txt
lib/src/phy/channel/: CMakeLists.txt
lib/src/phy/common/: CMakeLists.txt
lib/src/phy/dft/: CMakeLists.txt
lib/src/phy/fec/: CMakeLists.txt
lib/src/phy/fec/block/: CMakeLists.txt
lib/src/phy/fec/convolutional/: CMakeLists.txt
lib/src/phy/fec/ldpc/: CMakeLists.txt
lib/src/phy/fec/polar/: CMakeLists.txt
lib/src/phy/fec/turbo/: CMakeLists.txt
lib/src/phy/mimo/: CMakeLists.txt
lib/src/phy/modem/: CMakeLists.txt
lib/src/phy/phch/: CMakeLists.txt
lib/src/phy/resampling/: CMakeLists.txt
lib/src/phy/scrambling/: CMakeLists.txt
lib/src/phy/sync/: CMakeLists.txt
lib/src/phy/ue/: CMakeLists.txt
lib/src/phy/utils/: CMakeLists.txt
